# talk-to-your-data

./: .gitignore  README.md  design_doc.md  directory_structure.md  pyproject.toml  requirements.txt  vLLM_LoRA_docs.md  vanna_basic_setup_docs.md
src/: __init__.py  check_models.py  main.py  streamlit_app.py
src/conversational_layer/: __init__.py  conversation.py  prompt_templates.py
src/database/: db_utils.py  setup_db.py
src/ui/: cli_interface.py
src/vanna_integration/: api_setup.py  schema_definition.py  vanna_wrapper.py
src/visualizations/: plot_results.py
src/vllm_integration/: __init__.py  config.py  server.py  vllm_client.py
